# jw-uart-mon

./: Cargo.toml  README.md
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-04-15-uart-mon.md
docs/superpowers/specs/: 2026-04-15-uart-mon-design.md
examples/: direct_test.rs  loopback_test.rs
src/: app.rs  clipboard.rs  config.rs  error.rs  input.rs  lib.rs  log_writer.rs  main.rs  serial.rs
src/ui/: mod.rs  modal.rs  theme.rs
tests/: serial_integration.rs
