[package]
name = "uart-mon"
version = "0.2.0"
edition = "2021"
description = "Cross-platform TUI UART monitor"
license = "MIT"

[lib]
name = "uart_mon"
path = "src/lib.rs"

[[bin]]
name = "uart-mon"
path = "src/main.rs"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
serialport = { version = "4.6", default-features = false }
crossbeam-channel = "0.5"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
directories = "5"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
thiserror = "1"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
